--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,6 +6,8 @@
 		{% for field in form %}
 			{{ render_field(field) }}
 		{% endfor %}
-		<button type="submit" id="submit" class="btn btn-success btn-lg">Contact Us</button>
+		<fieldset>
+			<button type="submit" id="submit" class="btn btn-success btn-lg">Contact Us</button>
+		</fieldset>
 	</form>
 {% endblock %}
