--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,28 +3,22 @@
     <head lang="en">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="bootstrap.min.css") }}">
+        <!--<link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="bootstrap.min.css") }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="bootstrap-theme.min.css") }}">
         <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="flat-ui.min.css") }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="style.css") }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="flat-ui.min.css") }}">-->
+        <link href='http://fonts.googleapis.com/css?family=Arvo:400,400italic' rel='stylesheet' type='text/css'>
+        <!--<link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="normalize.css") }}">-->
+        <link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="style2.css") }}">
         <title>{% block title %}Charles Thomas | Developer {% endblock %}</title>
         <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
 
         <script src="{{ url_for("static", filename="Chart.min.js" )}}"></script>
     </head>
     <body>
-        <div id="fb-root"></div>
-        <script>(function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.0";
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
-        <div class="container theme-showcase">
+        <div id="wrap">
             <header>
-                <div class="hidden-xs">
+                <!--<div class="hidden-xs">
                 <h1>Charles Thomas</h1>
                 <h2>Developer</h2>
                 <p>
@@ -60,20 +54,20 @@
                     {% endif %}
                     |
                 </p>
-                </div>
-                <nav class="navbar navbar-default hidden-sm hidden-md hidden-lg navbar-fixed-top">
-                  <div class="container-fluid">
+                </div>-->
+                <!--<nav class="navbar navbar-default hidden-sm hidden-md hidden-lg navbar-fixed-top">-->
+                  <!--<div class="container-fluid">-->
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
+                    <!--<div class="navbar-header">
                       <button class="navbar-my-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="caret"></span>
                       </button>
                       <a class="navbar-brand" href="#">Charles Thomas</a>
-                    </div>
+                    </div>-->
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li>
                                 <a href="{{ url_for("index") }}">
@@ -111,21 +105,68 @@
                                     </a>
                                 {% endif %}
                             </li>    
+                        </ul>-->
+                    <!--</div>/.navbar-collapse -->
+                  <!--</div> /.container-fluid -->
+                <!--</nav>-->
+
+            <nav id="site-nav">
+                <h1>Charles Thomas</h1>
+                <div class="v-wrap">
+                    <div class="v-box">
+                        <ul class="">
+                            <li>
+                                <a href="{{ url_for("index") }}">
+                                    BLOG
+                                </a>
+                            </li>
+                            <li>
+                                <a href="{{ url_for("about") }}">
+                                    ABOUT
+                                </a> 
+                            </li>
+                            <li>
+                                <a href="{{ url_for("portfolio") }}">
+                                    PORTFOLIO
+                                </a>
+                            </li>
+                            <li>
+                                <a href="{{ url_for("points") }}">
+                                    TEAM TREEHOUSE
+                                </a>
+                            </li>
+                            <li>
+                                <a href="{{ url_for("contact") }}">
+                                    CONTACT
+                                </a>
+                            </li>
+                            <li>
+                                {% if current_user.is_authenticated() %}
+                                    <a href="{{ url_for("logout") }}">
+                                        LOGOUT
+                                    </a>
+                                {% else %}
+                                    <a href="{{ url_for("login") }}">
+                                        LOGIN
+                                    </a>
+                                {% endif %}
+                            </li>    
                         </ul>
-                    </div><!-- /.navbar-collapse -->
-                  </div><!-- /.container-fluid -->
-                </nav>
+                    </div>
+                </div>
+            </nav>
                 
             </header>
-            {% block body %}
-            {% endblock %}
+            <div class="main">
+                {% block body %}
+                {% endblock %}
+            </div>
+        </div>
+        <footer>
             <p class="footer">
                 &copy; Charles Thomas 2015
-                <br>
-                <small>With thanks to <a href="http://designmodo.com/flat-free/">Designmodo</a></small>
             </p>
-
-        </div>
+        </footer>
         
         
         {% for message in get_flashed_messages() %}
