--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,13 +1,26 @@
 {% macro render_field(field) %}
-	<div class="field">
+	
 		{% if field.errors %}
 			{% for error in field.errors %}
 				<div class="notification error">{{ error }}</div>
 			{% endfor %}
 		{% endif %}
     	{% if field.type != "CSRFTokenField" %}
-			<label for="{{ field.id }}">{{ field.label.text }}</label>
-			{{ field(placeholder=field.label.text, class="form-control") }}
+    		{% if field.type == "StringField" %}
+		    	<fieldset>
+					<label for="{{ field.id }}">{{ field.label.text }}</label>
+					{{ field(placeholder=field.label.text, class="form-control", size="30") }}
+				</fieldset>
+			{% elif field.type == "TextAreaField" %}
+				<fieldset>
+					<label for="{{ field.id }}">{{ field.label.text }}</label>
+					{{ field(placeholder=field.label.text, class="form-control", cols="30", rows="5") }}
+				</fieldset>
+			{% else %}
+				<fieldset>
+					<label for="{{ field.id }}">{{ field.label.text }}</label>
+					{{ field(placeholder=field.label.text, class="form-control", size="30") }}
+				</fieldset>
+			{% endif %}
 		{% endif %}
-	</div>
 {% endmacro %}
