--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -1,9 +1,40 @@
 {% extends "layout.html" %}
 {% block body %}
 	<h3>Projects</h3>
-    <ul>
-       
+    <ul id="portfolio-listing">
+
         {% for project in projects %}
+            <li>
+                <ul>
+                    <li>{{ project["title"] }}</li>
+                    <li>
+                        <a href="{{ project["link"] }}" class="projectLink" style="word-wrap: break-word;">
+                            {{ project["link"] }}
+                        </a>
+                    </li>
+                    <li>
+                        <a class="btn btn-info view-btn {{ project.id|string + "Toggle" }}" role="button" href="#">
+                          View Description
+                        </a>
+                        {% if current_user.is_authenticated() %}
+                           <a class="btn btn-warning" href="{{ url_for("update_project", id=project.id) }}" role="button">
+                               Edit
+                           </a>
+                            <a class="btn btn-danger" href="{{ url_for("delete_project", id=project.id) }}" role="button">
+                                Delete
+                            </a>
+                        {% endif %}
+                        <ul class="{{ project.id|string + "Menu" }}">
+                            <li>
+                                {{ project["description"] }}
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        {% endfor %}
+       
+        <!--{% for project in projects %}
             <li>
                 <h4>
                     {{ project["title"] }}
@@ -18,12 +49,12 @@
                   View Description
                 </a>
                 {% if current_user.is_authenticated() %}
-                   <button class="btn btn-warning" onclick="location.href='{{ url_for("update_project", id=project.id) }}'">
+                   <a class="btn btn-warning" href="{{ url_for("update_project", id=project.id) }}" role="button">
                        Edit
-                   </button>
-                    <button class="btn btn-danger" onclick="location.href='{{ url_for("delete_project", id=project.id) }}'">
+                   </a>
+                    <a class="btn btn-danger" href="{{ url_for("delete_project", id=project.id) }}" role="button">
                         Delete
-                    </button>
+                    </a>
                 {% endif %}
                 <ul class="{{ project.id|string + "Menu" }}">
                     <li>
@@ -35,8 +66,8 @@
         {% endfor %}
     </ul>
     {% if current_user.is_authenticated() %}
-        <button class="btn btn-success btn-lg" onclick="location.href='{{ url_for("add_project") }}'">Add A Project</button>
-    {% endif %}
+        <a class="btn" href="{{ url_for("add_project") }}">Add A Project</a>
+    {% endif %}-->
 {% endblock %}
 {% block extra_js %}
     <script>
