--- a/templates/show.html
+++ b/templates/show.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 {% block body %}
     <h3>Posts</h3>
-    <table class="table-responsive table">
-       
-        {% for post in posts %}
-            <tr>
-                <td {% if current_user.is_authenticated() %}colspan="3"{% endif %} class="cleantable">
-                    {{ post.title }} - {{ post.posted_at }}
-                </td>
+    <table id="posts-table">
+        <tbody>
+            {% for post in posts %}
+                <tr>
+                    <td>
+                        {{ post.title }} - {{ post.posted_at }}
+                    </td>
 
                     <td>
                         <button class="btn btn-info btn-lg" onclick="location.href='{{ url_for("post", id=post.id) }}'">
@@ -15,25 +15,30 @@
                         </button>
                     </td>
 
-                {% if current_user.is_authenticated() %}
+                    {% if current_user.is_authenticated() %}
 
-                    <td>
-                        <button class="btn btn-warning btn-lg" onclick="location.href='{{ url_for("update", id=post.id) }}'">
-                            Edit
-                        </button>
-                    </td>
+                        <td>
+                            <button class="btn btn-warning btn-lg" onclick="location.href='{{ url_for("update", id=post.id) }}'">
+                                Edit
+                            </button>
+                        </td>
 
-                    <td>
-                        <button class="btn btn-danger btn-lg" onclick="location.href='{{ url_for("delete", id=post.id) }}'">
-                            Delete
-                        </button>
-                    </td>
+                        <td>
+                            <button class="btn btn-danger btn-lg" onclick="location.href='{{ url_for("delete", id=post.id) }}'">
+                                Delete
+                            </button>
+                        </td>
 
-                {% endif %}
+                    {% endif %}
+                </tr>
+            {% endfor %}
+            <tr>
+                <td>
+                    {% if current_user.is_authenticated() %}
+                        <button class="btn btn-success btn-lg" onclick="location.href='{{ url_for("add") }}'">Add A Post</button>
+                    {% endif %}
+                </td>
             </tr>
-        {% endfor %}
+        </tbody>
     </table>
-    {% if current_user.is_authenticated() %}
-        <button class="btn btn-success btn-lg" onclick="location.href='{{ url_for("add") }}'">Add A Post</button>
-    {% endif %}
 {% endblock %}
