--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,8 @@
     <head lang="en">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Charles Thomas">
+        <meta name="description" content="The personal blog and site of a teenage developer.">
         <!--<link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="bootstrap.min.css") }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="bootstrap-theme.min.css") }}">
         <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
@@ -12,149 +14,67 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="style2.css") }}">
         <title>{% block title %}Charles Thomas | Developer {% endblock %}</title>
         <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
-
         <script src="{{ url_for("static", filename="Chart.min.js" )}}"></script>
+        {% if not current_user.is_authenticated() %}
+            <script>
+                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+                ga('create', 'UA-61543929-1', 'auto');
+                ga('send', 'pageview');
+            </script>
+        {% endif %}
     </head>
     <body>
         <div id="wrap">
             <header>
-                <!--<div class="hidden-xs">
-                <h1>Charles Thomas</h1>
-                <h2>Developer</h2>
-                <p>
-                    |
-                    <a href="{{ url_for("index") }}">
-                        BLOG
-                    </a>
-                    |
-                    <a href="{{ url_for("about") }}">
-                        ABOUT
-                    </a>
-                    |
-                    <a href="{{ url_for("portfolio") }}">
-                        PORTFOLIO
-                    </a>
-                    |
-                    <a href="{{ url_for("points") }}">
-                        TEAM TREEHOUSE
-                    </a>
-                    |
-                    <a href="{{ url_for("contact") }}">
-                        CONTACT
-                    </a>
-                    |
-                    {% if current_user.is_authenticated()%}
-                        <a href="{{ url_for("logout") }}">
-                            LOGOUT
-                        </a>
-                    {% else %}
-                        <a href="{{ url_for("login") }}">
-                            LOGIN
-                        </a>
-                    {% endif %}
-                    |
-                </p>
-                </div>-->
-                <!--<nav class="navbar navbar-default hidden-sm hidden-md hidden-lg navbar-fixed-top">-->
-                  <!--<div class="container-fluid">-->
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <!--<div class="navbar-header">
-                      <button class="navbar-my-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="caret"></span>
-                      </button>
-                      <a class="navbar-brand" href="#">Charles Thomas</a>
-                    </div>-->
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li>
-                                <a href="{{ url_for("index") }}">
-                                    BLOG
-                                </a>
-                            </li>
-                            <li>
-                                <a href="{{ url_for("about") }}">
-                                    ABOUT
-                                </a> 
-                            </li>
-                            <li>
-                                <a href="{{ url_for("portfolio") }}">
-                                    PORTFOLIO
-                                </a>
-                            </li>
-                            <li>
-                                <a href="{{ url_for("points") }}">
-                                    TEAM TREEHOUSE
-                                </a>
-                            </li>
-                            <li>
-                                <a href="{{ url_for("contact") }}">
-                                    CONTACT
-                                </a>
-                            </li>
-                            <li>
-                                {% if current_user.is_authenticated() %}
-                                    <a href="{{ url_for("logout") }}">
-                                        LOGOUT
+                <nav id="site-nav">
+                    <h1>Charles Thomas</h1>
+                    <div class="v-wrap">
+                        <div class="v-box">
+                            <ul class="">
+                                <li>
+                                    <a href="{{ url_for("index") }}">
+                                        BLOG
                                     </a>
-                                {% else %}
-                                    <a href="{{ url_for("login") }}">
-                                        LOGIN
+                                </li>
+                                <li>
+                                    <a href="{{ url_for("about") }}">
+                                        ABOUT
+                                    </a> 
+                                </li>
+                                <li>
+                                    <a href="{{ url_for("portfolio") }}">
+                                        PORTFOLIO
                                     </a>
-                                {% endif %}
-                            </li>    
-                        </ul>-->
-                    <!--</div>/.navbar-collapse -->
-                  <!--</div> /.container-fluid -->
-                <!--</nav>-->
-
-            <nav id="site-nav">
-                <h1>Charles Thomas</h1>
-                <div class="v-wrap">
-                    <div class="v-box">
-                        <ul class="">
-                            <li>
-                                <a href="{{ url_for("index") }}">
-                                    BLOG
-                                </a>
-                            </li>
-                            <li>
-                                <a href="{{ url_for("about") }}">
-                                    ABOUT
-                                </a> 
-                            </li>
-                            <li>
-                                <a href="{{ url_for("portfolio") }}">
-                                    PORTFOLIO
-                                </a>
-                            </li>
-                            <li>
-                                <a href="{{ url_for("points") }}">
-                                    TEAM TREEHOUSE
-                                </a>
-                            </li>
-                            <li>
-                                <a href="{{ url_for("contact") }}">
-                                    CONTACT
-                                </a>
-                            </li>
-                            <li>
-                                {% if current_user.is_authenticated() %}
-                                    <a href="{{ url_for("logout") }}">
-                                        LOGOUT
+                                </li>
+                                <li>
+                                    <a href="{{ url_for("points") }}">
+                                        TEAM TREEHOUSE
                                     </a>
-                                {% else %}
-                                    <a href="{{ url_for("login") }}">
-                                        LOGIN
+                                </li>
+                                <li>
+                                    <a href="{{ url_for("contact") }}">
+                                        CONTACT
                                     </a>
-                                {% endif %}
-                            </li>    
-                        </ul>
+                                </li>
+                                <li>
+                                    {% if current_user.is_authenticated() %}
+                                        <a href="{{ url_for("logout") }}">
+                                            LOGOUT
+                                        </a>
+                                    {% else %}
+                                        <a href="{{ url_for("login") }}">
+                                            LOGIN
+                                        </a>
+                                    {% endif %}
+                                </li>    
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
                 
             </header>
             <div class="main">
