--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,6 +17,8 @@
 	<section id="contact-details">
 		<ul>
 			<li>Twitter: <a href="https://twitter.com/AttwoodCharlie">@AttwoodCharlie</a></li>
+			<li>Google Plus: <a href="https://plus.google.com/u/0/103227713602162942632">https://plus.google.com/u/0/103227713602162942632</a></li>
+			<li>Github: <a href="https://github.com/Ottermad">Ottermad</a></li>
 			<li>Email: <a href="mailto:charlie.thomas@attwoodthomas.net">charlie.thomas@attwoodthomas.net</a></li>
 			<li>Phone: <a href="tel:+447795958759">+447795958758</a></li>
 		</ul>
