added facebook like and share

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,6 +14,7 @@
         </a>
     </p>
     <p>
-        If you want to get in touch shoot me an email or tweet me.
+        If you like my website, please like it:
     </p>
+    <div class="fb-like" data-href="http://attwoodthomas.me" data-width="100" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 {% endblock %}
