--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -16,7 +16,7 @@
         <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> 
     </div>
-    <button class="btn btn-info btn-lg" onclick="location.href='{{ url_for("index") }}'">
+    <button class="btn btn-info btn-lg" onclick="location.href='{{ url_for("posts_blueprint.index") }}'">
         Go Back
     </button>
     <div id="disqus_thread"></div>
