--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -17,10 +17,10 @@
                           View Description
                         </a>
                         {% if current_user.is_authenticated() %}
-                           <a class="btn btn-warning" href="{{ url_for("update_project", id=project.id) }}" role="button">
+                           <a class="btn btn-warning" href="{{ url_for("projects_blueprint.update_project", id=project.id) }}" role="button">
                                Edit
                            </a>
-                            <a class="btn btn-danger" href="{{ url_for("delete_project", id=project.id) }}" role="button">
+                            <a class="btn btn-danger" href="{{ url_for("projects_blueprint.delete_project", id=project.id) }}" role="button">
                                 Delete
                             </a>
                         {% endif %}
