--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -8,8 +8,7 @@
         <link href='http://fonts.googleapis.com/css?family=Arvo:400,400italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="{{ url_for("static", filename="style2.css") }}">
         <title>{% block title %}Charles Thomas | Developer {% endblock %}</title>
-        <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
-        <script src="{{ url_for("static", filename="Chart.min.js" )}}"></script>
+        <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.min.css" />
         {% if not current_user.is_authenticated() %}
             <script>
                 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
